--- a/BeamForming/MainWindow3.xaml
+++ b/BeamForming/MainWindow3.xaml
@@ -19,6 +19,7 @@
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
         <l:MultiplyConverter x:Key="GHz" K="1e-9"/>
+        <l:MultiplyConverter x:Key="ns" K="1e+9"/>
         <l:MultiplyConverter x:Key="InDeg" K="57.2957795130823"/>
     </Window.Resources>
     <DockPanel>
@@ -91,19 +92,6 @@
                                     <Style TargetType="{x:Type xc:DoubleUpDown}">
                                         <Setter Property="Focusable" Value="True"/>
                                         <Style.Triggers>
-                                            <!--<MultiTrigger>
-                                                <MultiTrigger.Conditions>
-                                                    <Condition Property="IsMouseOver" Value="false"/>
-                                                    <Condition Property="IsFocused" Value="false"/>
-                                                </MultiTrigger.Conditions>
-                                                <Setter Property="Template">
-                                                    <Setter.Value>
-                                                        <ControlTemplate TargetType="xc:DoubleUpDown">
-                                                            <TextBlock Text="{Binding Value, RelativeSource={RelativeSource TemplatedParent}, StringFormat=0.0#}"/>
-                                                        </ControlTemplate>
-                                                    </Setter.Value>
-                                                </Setter>
-                                            </MultiTrigger>-->
                                             <Trigger Property="IsMouseOver" Value="False">
                                                 <Setter Property="Template">
                                                     <Setter.Value>
@@ -431,6 +419,12 @@
                             </oxy:Plot.Axes>
                             <oxy:LineSeries StrokeThickness="2" Color="Red" ItemsSource="{Binding Pattern}" 
                                             DataFieldX="Angle" DataFieldY="Value_dbP"/>
+                            <!--<oxy:Plot.Annotations>
+                                <oxy:LineAnnotation MinimumX="-30" 
+                                                    MaximumX="50"
+                                                    Y="10" 
+                                                    StrokeThickness="2" Type="Horizontal"/>
+                            </oxy:Plot.Annotations>-->
                         </oxy:Plot>
                         <TextBlock Text="{Binding PatternMaximum, FallbackValue=--, StringFormat={}{0:0.0##}db}" VerticalAlignment="Top" HorizontalAlignment="Left"/>
                         <xc:DoubleUpDown VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="0,0,0,24" 
